# job_finder

./: .gitignore  Cargo.toml  README.md  jobs.db  test_bulk.json
backend/: Cargo.toml  test_bulk.json  weekly_ingest.ps1  weekly_ingest.sh
backend/flycheck0/: stderr
backend/src/: db.rs  ingest.rs  main.rs  models.rs
backend/src/handlers/: health.rs  ingest.rs  jobs.rs  mod.rs
backend/src/ingest/: adzuna.rs  mod.rs
frontend/: index.html  package.json  tsconfig.json  vercel.json
frontend/api/: keep-warm.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: JobCard.tsx  JobList.tsx  JobModal.tsx  SearchBar.tsx  loadingSpinner.tsx
src/: main.rs
