[package]
name = "job_finder_BE"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"    
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls"] }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.6", features = ["cors"] }
dotenvy = "0.15"
